# basic-webserver

./: .gitignore  Cargo.toml  build.roc  bundle.sh
.github/workflows/: bundle.yaml  ci.yml  ci_nix.yml  deploy-docs.yml
ci/: check-sync-basic-cli.sh
ci/expect_scripts/: file.exp  path-test.exp
crates/roc_host/: Cargo.toml
crates/roc_host/src/: roc.rs
platform/: Crypto.roc  File.roc  Host.roc  Path.roc
tests/: crypto.roc  file.roc  path-test.roc
